--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="parent1">
+    <div class="parent1 pg3mainbox">
         <div class="task"> Tasks <span class="list">list</span></div> 
 
         <a href="index4.html" target="_top" class="navbar">
@@ -25,7 +25,7 @@
             
             <a href="index.html "><i class="fa-solid fa-circle-arrow-left back-arrow back-arrow3"></i>
             <span class="back3" style="color: black;"> Back </span></a>
-            <div class="parent3">
+            <div class="parent3 pg3popup">
                 <div class=" pg3paris">
                     <a href="index4.html" target="_top" class="navbar">
                 <span class="head">Trip to paris</span><br><br>
