--- a/index2.html
+++ b/index2.html
@@ -90,7 +90,7 @@
                     <span class="s1">
                         Add New task
                         
-                        <a href="index.html"> <span><i class="fa-solid fa-xmark cross"> </a></i></span>
+                        <!-- <a href="index.html"> <span><i class="fa-solid fa-xmark cross"> </a></i></span> -->
                     </span>
                     <br>
                    
