--- a/index2.html
+++ b/index2.html
@@ -95,7 +95,7 @@
                     <br>
                    
                     <hr class="line">
-                    <input type="text" placeholder="learn C++" id="Add Form" class="t" disabled>
+                    <input type="text" placeholder="learn C++" class="t" disabled>
                 
                     <br><br>
                     <a href="index3.html" target="_self" class="navbar">
